--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
 firebase-debug.log*
 firebase-debug.*.log*
 
@@ -67,3 +86,8 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+
+# Logs
+logs
+*.log
